[GC-43] First version of the power shortage handling