@@ -2,19 +2,24 @@ package agents.server;
 
 import static common.GUIUtils.displayMessageArrow;
 import static common.GUIUtils.updateServerState;
+import static java.time.temporal.ChronoUnit.HOURS;
+import static mapper.JsonMapper.getMapper;
 import static messages.domain.JobStatusMessageFactory.prepareFinishMessage;
 
 import agents.AbstractAgent;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import domain.GreenSourceData;
 import domain.job.Job;
 import domain.job.JobStatusEnum;
+import domain.job.PowerJob;
 import jade.core.AID;
 import jade.lang.acl.ACLMessage;
 
 import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
+import java.util.stream.Collectors;
 
 /**
  * Abstract agent class storing data of the Server Agent
@@ -23,17 +28,17 @@ public abstract class AbstractServerAgent extends AbstractAgent {
 
     protected double pricePerHour;
     protected int maximumCapacity;
-    protected Map<Job, JobStatusEnum> serverJobs;
-    protected Map<String, AID> greenSourceForJobMap;
+    protected transient ConcurrentMap<Job, JobStatusEnum> serverJobs;
+    protected transient ConcurrentMap<String, AID> greenSourceForJobMap;
     protected List<AID> ownedGreenSources;
     protected AID ownerCloudNetworkAgent;
 
     AbstractServerAgent() {
         super.setup();
 
-        serverJobs = new HashMap<>();
+        serverJobs = new ConcurrentHashMap<>();
         ownedGreenSources = new ArrayList<>();
-        greenSourceForJobMap = new HashMap<>();
+        greenSourceForJobMap = new ConcurrentHashMap<>();
     }
 
     /**
@@ -49,8 +54,8 @@ public abstract class AbstractServerAgent extends AbstractAgent {
      */
     AbstractServerAgent(double pricePerHour,
                         int maximumCapacity,
-                        Map<Job, JobStatusEnum> serverJobs,
-                        Map<String, AID> greenSourceForJobMap,
+                        ConcurrentMap<Job, JobStatusEnum> serverJobs,
+                        ConcurrentMap<String, AID> greenSourceForJobMap,
                         List<AID> ownedGreenSources,
                         AID ownerCloudNetworkAgent) {
         this.pricePerHour = pricePerHour;
@@ -82,6 +87,15 @@ public abstract class AbstractServerAgent extends AbstractAgent {
     }
 
     /**
+     * Method retrieves the number of jobs that are executed by the server
+     *
+     * @return jobs count
+     */
+    public int getJobCount() {
+        return serverJobs.keySet().stream().map(Job::getJobId).collect(Collectors.toSet()).size();
+    }
+
+    /**
      * Method computes the available power for given time frame
      *
      * @param startDate starting date
@@ -92,8 +106,7 @@ public abstract class AbstractServerAgent extends AbstractAgent {
                                     final OffsetDateTime endDate) {
         final int powerInUser =
                 serverJobs.keySet().stream()
-                        .filter(job -> job.getStartTime().isBefore(endDate) &&
-                                job.getEndTime().isAfter(startDate))
+                        .filter(job -> job.getStartTime().isBefore(endDate) && job.getEndTime().isAfter(startDate))
                         .mapToInt(Job::getPower).sum();
         return maximumCapacity - powerInUser;
     }
@@ -102,15 +115,75 @@ public abstract class AbstractServerAgent extends AbstractAgent {
      * Method performs default behaviour when the job is finished
      *
      * @param jobToFinish job to be finished
+     * @param informCNA   flag indicating whether cloud network should be informed about the job finish
      */
-    public void finishJobExecution(final Job jobToFinish) {
-        final List<AID> receivers = List.of(greenSourceForJobMap.get(jobToFinish.getJobId()), ownerCloudNetworkAgent);
-        final ACLMessage finishJobMessage = prepareFinishMessage(jobToFinish.getJobId(), receivers);
+    public void finishJobExecution(final Job jobToFinish, final boolean informCNA) {
+        final List<AID> receivers = informCNA ? List.of(greenSourceForJobMap.get(jobToFinish.getJobId()), ownerCloudNetworkAgent) :
+                Collections.singletonList(greenSourceForJobMap.get(jobToFinish.getJobId()));
+        final ACLMessage finishJobMessage = prepareFinishMessage(jobToFinish.getJobId(), jobToFinish.getStartTime(), receivers);
         serverJobs.remove(jobToFinish);
         greenSourceForJobMap.remove(jobToFinish.getJobId());
-        updateServerState((ServerAgent) this, true);
+        updateServerState((ServerAgent) this);
         displayMessageArrow(this, receivers);
         this.send(finishJobMessage);
+    }
+
+    /**
+     * Method chooses the green source for job execution
+     *
+     * @param greenSourceOffers offers from green sources
+     * @return chosen offer
+     */
+    public ACLMessage chooseGreenSourceToExecuteJob(final List<ACLMessage> greenSourceOffers) {
+        final Comparator<ACLMessage> compareGreenSources =
+                Comparator.comparingDouble(greenSource -> {
+                    try {
+                        return getMapper().readValue(greenSource.getContent(), GreenSourceData.class).getAvailablePowerInTime();
+                    } catch (final JsonProcessingException e) {
+                        return Double.MAX_VALUE;
+                    }
+                });
+        return greenSourceOffers.stream().min(compareGreenSources).orElseThrow();
+    }
+
+    /**
+     * Method calculates the price for executing the job by given green source and server
+     *
+     * @param greenSourceData green source executing the job
+     * @return full price
+     */
+    public double calculateServicePrice(final GreenSourceData greenSourceData) {
+        var job = getJobById(greenSourceData.getJobId());
+        var powerCost = job.getPower() * greenSourceData.getPricePerPowerUnit();
+        var computingCost =
+                HOURS.between(job.getEndTime(), job.getStartTime()) * getPricePerHour();
+        return powerCost + computingCost;
+    }
+
+    /**
+     * Method retrieves the job by the job id and star time from job map
+     *
+     * @param jobId     job identifier
+     * @param startTime job start time
+     * @return job
+     */
+    public Job getJobByIdAndStartDate(final String jobId, final OffsetDateTime startTime) {
+        return serverJobs.keySet().stream()
+                .filter(job -> job.getJobId().equals(jobId) && job.getStartTime().isEqual(startTime)).findFirst().orElse(null);
+    }
+
+    /**
+     * Method retrieves the job by the job id and end time from job map
+     *
+     * @param jobId   job identifier
+     * @param endTime job end time
+     * @return job
+     */
+    public Job getJobByIdAndEndDate(final String jobId, final OffsetDateTime endTime) {
+        return serverJobs.keySet().stream()
+                .filter(job -> job.getJobId().equals(jobId) && job.getEndTime().isEqual(endTime))
+                .findFirst()
+                .orElse(null);
     }
 
     public Job getJobById(final String jobId) {
@@ -141,11 +214,11 @@ public abstract class AbstractServerAgent extends AbstractAgent {
         this.pricePerHour = pricePerHour;
     }
 
-    public Map<Job, JobStatusEnum> getServerJobs() {
+    public ConcurrentMap<Job, JobStatusEnum> getServerJobs() {
         return serverJobs;
     }
 
-    public void setServerJobs(Map<Job, JobStatusEnum> serverJobs) {
+    public void setServerJobs(ConcurrentHashMap<Job, JobStatusEnum> serverJobs) {
         this.serverJobs = serverJobs;
     }
 
@@ -157,11 +230,11 @@ public abstract class AbstractServerAgent extends AbstractAgent {
         this.ownedGreenSources = ownedGreenSources;
     }
 
-    public Map<String, AID> getGreenSourceForJobMap() {
+    public ConcurrentMap<String, AID> getGreenSourceForJobMap() {
         return greenSourceForJobMap;
     }
 
-    public void setGreenSourceForJobMap(Map<String, AID> greenSourceForJobMap) {
+    public void setGreenSourceForJobMap(ConcurrentHashMap<String, AID> greenSourceForJobMap) {
         this.greenSourceForJobMap = greenSourceForJobMap;
     }
 }
