@@ -2,12 +2,12 @@ package agents.server.behaviour;
 
 import static common.GUIUtils.displayMessageArrow;
 import static common.GUIUtils.updateServerState;
-import static common.TimeUtils.convertToSimulationTime;
 import static common.TimeUtils.getCurrentTime;
 import static messages.domain.JobStatusMessageFactory.prepareJobStartedMessage;
 
 import agents.server.ServerAgent;
 import domain.job.Job;
+import domain.job.JobInstanceIdentifier;
 import domain.job.JobStatusEnum;
 import jade.core.AID;
 import jade.core.Agent;
@@ -17,25 +17,30 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.time.temporal.ChronoUnit;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 public class StartJobExecution extends WakerBehaviour {
 
     private static final Logger logger = LoggerFactory.getLogger(StartJobExecution.class);
     private final ServerAgent myServerAgent;
-    private final Job jobToExecute;
+    private final JobInstanceIdentifier jobToExecute;
+    private final boolean informCNA;
 
     /**
      * Behaviour constructor.
      *
-     * @param agent   agent that is executing the behaviour
-     * @param timeOut time after which the job will be executed
-     * @param job     job that is to be executed
+     * @param agent     agent that is executing the behaviour
+     * @param timeOut   time after which the job will be executed
+     * @param jobId     identifier of the job that is to be executed
+     * @param informCNA flag indicating whether the cloud network should be informed about job start
      */
-    private StartJobExecution(Agent agent, long timeOut, final Job job) {
+    private StartJobExecution(Agent agent, long timeOut, final JobInstanceIdentifier jobId, final boolean informCNA) {
         super(agent, timeOut);
-        this.jobToExecute = job;
+        this.jobToExecute = jobId;
         myServerAgent = (ServerAgent) agent;
+        this.informCNA = informCNA;
     }
 
     /**
@@ -43,14 +48,15 @@ public class StartJobExecution extends WakerBehaviour {
      * the job execution will start. For testing purposes 1h = 2s. If the provided time is later than
      * the current time then the job execution will start immediately
      *
-     * @param serverAgent  agent that will execute the behaviour
-     * @param jobToExecute job that will be executed
+     * @param serverAgent agent that will execute the behaviour
+     * @param jobId       identifier of the job that is to be executed
+     * @param informCNA   flag indicating whether the cloud network should be informed about job start
      * @return behaviour to be run
      */
-    public static StartJobExecution createFor(final ServerAgent serverAgent, final Job jobToExecute) {
-        final long hourDifference = ChronoUnit.SECONDS.between(getCurrentTime(), jobToExecute.getStartTime());
-        final long timeOut = convertToSimulationTime(hourDifference < 0 ? 0 : hourDifference);
-        return new StartJobExecution(serverAgent, timeOut, jobToExecute);
+    public static StartJobExecution createFor(final ServerAgent serverAgent, final JobInstanceIdentifier jobId, final boolean informCNA) {
+        final long timeDifference = ChronoUnit.MILLIS.between(getCurrentTime(), jobId.getStartTime());
+        final long timeOut = timeDifference < 0 ? 0 : timeDifference;
+        return new StartJobExecution(serverAgent, timeOut, jobId, informCNA);
     }
 
     /**
@@ -60,13 +66,17 @@ public class StartJobExecution extends WakerBehaviour {
      */
     @Override
     protected void onWake() {
-        logger.info("[{}] Start executing the job for {}", myAgent.getName(), jobToExecute.getClientIdentifier());
-        myServerAgent.getServerJobs().replace(jobToExecute, JobStatusEnum.IN_PROGRESS);
-        updateServerState(myServerAgent, false);
-        final List<AID> receivers = List.of(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()), myServerAgent.getOwnerCloudNetworkAgent());
-        final ACLMessage startedJobMessage = prepareJobStartedMessage(jobToExecute.getJobId(), receivers);
-        displayMessageArrow(myServerAgent, receivers);
-        myAgent.send(startedJobMessage);
-        myAgent.addBehaviour(FinishJobExecution.createFor(myServerAgent, jobToExecute));
+        final Job job = myServerAgent.getJobByIdAndStartDate(jobToExecute.getJobId(), jobToExecute.getStartTime());
+        if(Objects.nonNull(job)) {
+            logger.info("[{}] Start executing the job for {}", myAgent.getName(), job.getClientIdentifier());
+            myServerAgent.getServerJobs().replace(job, JobStatusEnum.IN_PROGRESS);
+            updateServerState(myServerAgent);
+            final List<AID> receivers = informCNA ? List.of(myServerAgent.getGreenSourceForJobMap().get(job.getJobId()), myServerAgent.getOwnerCloudNetworkAgent()) :
+                    Collections.singletonList(myServerAgent.getGreenSourceForJobMap().get(job.getJobId()));
+            final ACLMessage startedJobMessage = prepareJobStartedMessage(job.getJobId(), job.getStartTime(), receivers);
+            displayMessageArrow(myServerAgent, receivers);
+            myAgent.send(startedJobMessage);
+            myAgent.addBehaviour(FinishJobExecution.createFor(myServerAgent, job, true));
+        }
     }
 }
